# data-mgmt-book

./: .gitattributes  .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
.quarto/cites/: index.json
.quarto/idx/: index.qmd.json  intro.qmd.json  references.qmd.json
.quarto/xref/: 6af7b6d8  INDEX
DataManagementBook/: Manifest.toml  Project.toml
DataManagementBook/src/: DataManagementBook.jl
assets/: _workflow.qmd  data-management-book.bib  outline.txt
chapter_1/: index.qmd
chapter_2/: .vdoc.sh  index.qmd
chapter_2/code/: create_duckdb_file_cli.txt  csv_to_table.sql
chapter_3/: index.qmd
chapter_4/: file-conversion.py  index.ipynb  index.qmd  python-performance.py  r-performance.R
data/: WaffleDivorce.db
